# offboard_simulation

./: CMakeLists.txt  CMakeLists.txt~  package.xml
data/: 1000Hz_belowMVC.xls  1000Hz_overMVC.xls  1000Hz_overMVC_02 .xls  1000Hz_wr_belowMVC.xls  1000Hz_wr_overMVC.xls  1000Hz_wr_overMVC_02.xls  100Hz.xls  100Hz.xlsx  20Hz.xls  40Hz.xls  CJdata100Hz.xls  CJdata20Hz.xls  CJdata20Hz.xlsx  CJdata20Hzvel.xls  belowMVC.xls  data100Hzv1.xls  data20Hz_Z.xls  data20Hz_insert.xls  overMVC.xls  overMVC_02.xls  test.xls
document/: .~lock.Interfacing the Simulation to ROS.docx#  Interfacing the Simulation to ROS.docx
src/: att_interp.cpp  fly_obstacle.cpp  fly_xl.cpp  obstacle_avoid.cpp  off_test.cpp  offb_node.cpp  plot.py  plot_obstacle.py  read_xl.cpp  test.cpp
